--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://manibboyz.github.io/course-catalog",
   "name": "course-catalog",
   "version": "1.0.0",
   "description": "Browse, search and filter through a database of courses",
@@ -12,9 +13,12 @@
     "strftime": "^0.10.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
